--- a/package.json
+++ b/package.json
@@ -1,6 +1,35 @@
 {
+  "name": "bun-vs-node",
+  "version": "1.0.0",
+  "description": "Performance comparison between Bun and Node.js for CRUD operations",
+  "scripts": {
+    "start:node": "node node-crud.js",
+    "start:bun": "bun bun-crud.js",
+    "bench": "node autocannon-plot.js",
+    "start:both": "concurrently \"npm run start:node\" \"npm run start:bun\"",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
+    "autocannon": "^7.12.0",
     "better-sqlite3": "^11.8.1",
-    "express": "^4.21.2"
-  }
+    "express": "^4.21.2",
+    "nodeplotlib": "^1.1.2"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
+  },
+  "engines": {
+    "node": ">=14",
+    "bun": ">=1.0.0"
+  },
+  "keywords": [
+    "bun",
+    "node",
+    "performance",
+    "benchmark",
+    "crud",
+    "sqlite"
+  ],
+  "author": "",
+  "license": "MIT"
 }
